--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <h1>TLMT Studio</h1>
         <ul class="menu-elements">
-          <li class="menu-element"><a href="tel:0041792768141" >Jetzt Anrufen</a></li>
+          <li class="menu-element"><a href="tel:0041792768141">Jetzt Anrufen</a></li>
           <li class="menu-element"><a href="#contact">Kontakt</a></li>
           <li class="menu-element"><a
               href="https://www.google.com/maps/dir//TLMT+Studio/data=!4m8!4m7!1m0!1m5!1m1!1s0x479b1f5088ab10a1:0xb96230db6b2aea78!2m2!1d9.4891959!2d47.4666767">Route
@@ -230,8 +230,7 @@ margin: 3rem 0 4rem 0;
               background-color: #cc171e; 
               padding: 1rem 3rem; 
               color: white; 
-              font-size: 1rem;"
-              href="#contact">
+              font-size: 1rem;" href="#contact">
               Kontakt
             </a>
           </div>
@@ -396,15 +395,15 @@ margin: 3rem 0 4rem 0;
               </h3>
               <div class="price-element">
                 <label>Demo (3 songs / 2 Tage)</label>
-                <span>CHF 1'800.-</span>
+                <span>CHF 1'900.-</span>
               </div>
               <div class="price-element">
                 <label>EP (5 songs / 4 Tage)</label>
-                <span>CHF 2'800.-</span>
+                <span>CHF 2'900.-</span>
               </div>
               <div class="price-element">
                 <label>Album (9 songs / 8 Tage)</label>
-                <span>CHF 4'200.-</span>
+                <span>CHF 4'400.-</span>
               </div>
 
               <h3>
@@ -413,7 +412,7 @@ margin: 3rem 0 4rem 0;
               </h3>
               <div class="price-element">
                 <label>1 Tag</label>
-                <span>CHF 420.-</span>
+                <span>CHF 580.-</span>
               </div>
               <div class="price-element">
                 <label>ab 5 Tage</label>
@@ -518,8 +517,8 @@ margin: 3rem 0 4rem 0;
           </div>
 
           <div class="contact-content" style="margin: 0 auto; padding:4rem; text-align: left;">
-            <div class="left" >
-<h3>Kontaktdaten</h3>
+            <div class="left">
+              <h3>Kontaktdaten</h3>
               <strong>Joshua Wirth</strong>
               <p>TLMT Studio</p>
 
