--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
       theme: {
         extend: {
           backgroundImage: {
-            'walo': "url('resource/portrait-walo.png')",
-            'han': "url('resource/portrait-han.jpeg')",
-            'studio': "url('resource/studio_000.jpeg')",
+            'studio': "url('resource/studio_008.jpg')",
           }
         }
       }
