--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </nav>
 
 
-      <div class="grid grid-cols-2 lg:grid-cols-3 gap-16 text-sm md:text-xl text-center max-w-screen-2xl mx-auto text-black">
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 text-sm md:text-xl text-center max-w-screen-2xl mx-auto text-black">
         <div
           class="m-2 bg-fuchsia-300 bg-opacity-90 bg-blend-multiply rounded-xl text-center p-8 flex flex-col justify-between gap-8">
           <div>
@@ -73,7 +73,7 @@
           <p class="text-md">Han Beyli</p>
         </div>
 
-        <div class="m-2 bg-fuchsia-300 bg-opacity-90 rounded-xl text-center p-8 flex flex-col justify-between gap-8">
+        <div class="hidden md:block m-2 bg-fuchsia-300 bg-opacity-90 rounded-xl text-center p-8 flex flex-col justify-between gap-8">
           <div>
             <img src="resource/portrait-biagio.jpeg" class="rounded-full w-40 mx-auto mb-8" />
             <p>
@@ -185,7 +185,7 @@
     <div class="py-12 text-left" id="pricing">
       <h1 class="text-3xl my-12">Pricing</h1>
 
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
 
         <div class="grid grid-cols-[1fr,auto] rounded-xl bg-fuchsia-300 p-8">
           <div class="col-span-2 mb-4">
