add recording prices

--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
 
     function priceGroups() {
       return [
+          {
+          "title": "Recording",
+          "description": "8h Tag inkl. Techniker ",
+          "rates": [
+            {
+              "label": "halber Tag",
+              "price": "CHF 250.-"
+            },
+            {
+              "label": "ganzer Tag",
+              "price": "CHF 420.-"
+            },
+            {
+              "label": "Fünf Tage",
+              "price": "10% Rabatt"
+            }
+          ]
+        },
         {
           "title": "Mixing",
           "description": "Inklusive zwei Revisionen mit Änderungswünschen.",
