--- a/index.html
+++ b/index.html
@@ -469,6 +469,30 @@
               ]
             },
           ]
+        },
+        {
+          name: 'Werbung',
+          artists: [
+            {
+              name: "Tissot",
+              genre: "Werbung (Imagefilm)",
+              description: "Stimm Aufnahme für einen Imagefilm der Uhrenmarke Tissot. Mit Mountainbike Olympiasiegerin Jolanda Neff für ein Studio in Mailand.",
+              tags: [
+                "Recording",
+              ]
+            },
+            {
+              name: "My Car Ad",
+              genre: "Werbung (Lernvideo)",
+              description: "Vermittlung professioneller Sprecher. Aufnahme, Vertonung und Audioproduktion für einen animierten Werbefilm.",
+              tags: [
+                "Recording",
+                "Editing",
+                "Mixing",
+                "Mastering",
+              ]
+            }
+          ]
         }
       ];
     }
